# cse363encoderproject

./: Cargo.toml  histogram.py  readme.rst
src/: add_sub.rs  alpha_mixed.rs  bin.rs  encoder.rs  jmp_call_additive.rs  lib.rs  logical.rs  logical_arena.rs  macros.rs  shikata_ga_nai.rs  smol_set.rs
src/rex/: arch.rs  encoder.rs  encoding.rs  exceptions.rs  mod.rs
