[package]
name = "project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
bstr = "0.2"
lazy_static = "1.4.0"
rand_chacha = "0.2.2"
clap = "3.0.0-beta.1"
petgraph = "0.5.0"
thiserror = "1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"

[[bin]]
name = "bin"
path = "src/bin.rs"

[lib]
name = "lib"
path = "src/lib.rs"
